<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/findplace"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
>
<TextView
android:id="@+id/start_address_view"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/start"
>
</TextView>
<AutoCompleteTextView
android:id="@+id/start_address_input"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/start_input"
android:textSize="18sp"
>
</AutoCompleteTextView>
<TextView
android:id="@+id/end_address_view"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/end"
>
</TextView>
<AutoCompleteTextView
android:id="@+id/end_address_input"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:hint="@string/end_input"
android:textSize="18sp"
>
</AutoCompleteTextView>
<Button
android:id="@+id/search_button"
android:layout_width="59px"
android:layout_height="wrap_content"
android:text="@string/search"
>
</Button>
</LinearLayout>